// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Room delete should delete a room 1`] = `
Array [
  RowDataPacket {
    "created_at": 2018-01-01T00:00:00.000Z,
    "created_by": 1,
    "description": "this is a second test",
    "name": "room_2",
    "room_id": 2,
    "updated_at": 2018-01-02T00:00:00.000Z,
  },
]
`;

exports[`Room findAll should return all room 1`] = `
Array [
  RowDataPacket {
    "createdAt": 2018-01-01T00:00:00.000Z,
    "createdBy": 1,
    "description": "this is a test",
    "name": "room_1",
    "roomId": 1,
    "updatedAt": 2018-01-02T00:00:00.000Z,
  },
  RowDataPacket {
    "createdAt": 2018-01-01T00:00:00.000Z,
    "createdBy": 1,
    "description": "this is a second test",
    "name": "room_2",
    "roomId": 2,
    "updatedAt": 2018-01-02T00:00:00.000Z,
  },
]
`;

exports[`Room findById should return only one room 1`] = `
RowDataPacket {
  "createdAt": 2018-01-01T00:00:00.000Z,
  "createdBy": 1,
  "description": "this is a test",
  "name": "room_1",
  "roomId": 1,
  "updatedAt": 2018-01-02T00:00:00.000Z,
}
`;

exports[`Room findByIdAndUpdate should update a room 1`] = `
Array [
  RowDataPacket {
    "created_at": 2018-01-01T00:00:00.000Z,
    "created_by": 1,
    "description": "this is a test",
    "name": "updated",
    "room_id": 1,
    "updated_at": 2018-05-05T00:00:00.000Z,
  },
  RowDataPacket {
    "created_at": 2018-01-01T00:00:00.000Z,
    "created_by": 1,
    "description": "this is a second test",
    "name": "room_2",
    "room_id": 2,
    "updated_at": 2018-01-02T00:00:00.000Z,
  },
]
`;

exports[`Room save should save a new room 1`] = `
Array [
  RowDataPacket {
    "created_at": 2018-05-05T00:00:00.000Z,
    "created_by": 1,
    "description": "test",
    "name": "test-save",
    "room_id": 3,
    "updated_at": 2018-05-05T00:00:00.000Z,
  },
]
`;
